--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,44 +3,53 @@
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
 .top-header {
-    text-align: center; /* Alinea los textos al centro */
+    text-align: center;
+    /* Alinea los textos al centro */
     background-color: #263238;
     padding: 10px 0;
 }
+
 .top-header a {
     color: white;
-    text-decoration: none;    /* Elimina el subrayado de los links */
-
+    text-decoration: none;
+    /* Elimina el subrayado de los links */
 }
 
 header {
     width: 1100px;
-    margin: 0 auto;    /* Centra las cajas en medio */
+    margin: 0 auto;
+    /* Centra las cajas en medio */
     padding: 15px 0;
-
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 header>img {
     width: 180px;
 }
+
 nav>a {
     padding: 10px 20px 10px 20px;
     text-decoration: none;
     color: #3f3f3f;
     font-size: 18px;
 }
+
 nav>a:hover {
     color: #e7685a;
     border-bottom: 2px solid #e7685a;
 }
 
+
 /* NOSOTROS */
+
 .container-nosotros {
     background-color: #edf1f9;
 }
+
 .nosotros {
     width: 100%;
     max-width: 1100px;
@@ -48,11 +57,54 @@ nav>a:hover {
     text-align: center;
     padding: 80px 0;
 }
+
 .nosotros h1 {
     color: #e7685a;
     font-size: 35px;
 }
+
 .nosotros p {
     font-size: 25px;
     font-weight: 300;
+}
+
+
+/* SERVICIOS */
+
+.container-servicios {
+    background: url(../img/servicios.jpg);
+    padding: 120px 0;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.servicios {
+    width: 100%;
+    max-width: 1100px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.servicios h2 {
+    color: white;
+    font-size: 35px;
+    text-align: center;
+}
+
+.servicios p {
+    color: white;
+    font-size: 30px;
+    padding: 10px 0 20px 0;
+    text-align: center;
+}
+
+.servicios button {
+    background-color: #e55345;
+    color: white;
+    padding: 20px;
+    font-size: 20px;
+    border: none;
+    cursor: pointer;
+    margin: 0 auto;
 }
